Updated project name

--- a/client/app/panels/image-panel/image-panel.component.html
+++ b/client/app/panels/image-panel/image-panel.component.html
@@ -1,7 +1,7 @@
 <fw-panel>
   <div class="image-holder">
     <div class="title">
-      <span>Welcome to Green Nations!</span>
+      <span>Welcome to EduCentral!</span>
     </div>
   </div>
 </fw-panel>
