--- a/client/app/link3/link3.component.html
+++ b/client/app/link3/link3.component.html
@@ -1,4 +1,4 @@
- link3 works!
+ EduCentral: link3 works!
 
 <h2>Basic External Request</h2>
 <button type="button" (click)="makeRequest()">Make Request</button>
